fix: replace deprecated listTableColumns with streamRelationColumns